#Build file for the Messages system of the engine
target_sources(engine 
	PRIVATE 
		hello.cpp
)

#cmake_minimum_required(VERSION 3.24)
#project(messages_sys)
#
#set(SOURCE_FILES
#	src/hello.cpp)
#
#add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
# target_include_directories(${PROJECT_NAME} PUBLIC include)